--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -134,7 +134,7 @@
       },
       {
         "href": "/info/time",
-        "name": "Сроки проведения обязательных профилактических прививок в рамках гарантированного объема медицинской помощи"
+        "name": "Календарь прививок"
       },
       {
         "href": "/info/test",
@@ -207,14 +207,14 @@
         "content": "<one>\n1) ранее непривитые дети в возрасте:</one><two>\n - от 7 до 11 месяцев получают две дозы с интервалом один месяц, третья доза вводится на втором году жизни с интервалом не менее 2 месяцев после второй дозы;</two><two>\n - от 12 до 23 месяцев получают две дозы с интервалом два месяца, третья доза не вводится;</two><two>\n - от 2 до 5 лет получают одну дозу</two><two>\n - от 12 до 23 месяцев получают две дозы с интервалом два месяца, третья доза не вводится;</two><two>\n - от 2 до 5 лет получают одну дозу.</two><one>\n2) ранее привитые дети, имеющие одну дозу:</one><two>\n - от 7 до 11 месяцев получают последующие две дозы с интервалом два месяца, третья доза вводится до 15 месяцев жизни;</two><two>\n - от 12 до 23 месяцев, при вакцинации до достижения 1 года, получают две дозы с интервалом два месяца, при вакцинации в возрасте старше 1 года, получают 1 дозу;</two><two>\n - от 2 до 5 лет, если предшествующая доза вводилась в возрасте до 2 лет, то вводится одна доза с интервалом два месяца; если предшествующая доза введена в возрасте старше 2 лет, то введение дополнительных доз не требуется;</two><one>\n3) ранее привитые дети, имеющие две дозы:</one><two>\n - от 12 до 23 месяцев, при получении предшествующих доз в возрасте до 1 года, вводится третья доза с интервалом два месяца после второй;</two><two>\n - от 12 до 23 месяцев, при получении предшествующих доз в возрасте старше 1 года, введение дополнительных доз не требуется;</two><two>\n - от 2 до 5 лет, если предшествующие дозы введены в возрасте до 2 лет, то вводится одна доза с интервалом два месяца; если предшествующие дозы введены в возрасте старше 2 лет, то введение дополнительных доз не требуется.</two>"
       },
       "link2": {
-        "link": "\t\tII. Лица, не привитые против ВГВ, прививаются по следующей схеме:",
+        "link": "\t\tЛица, не привитые против ВГВ, прививаются по следующей схеме:",
         "content": "<one>\n 1) дети до 6 лет, не вакцинированные при рождении – 0-2-4 с интервалами между прививками – два месяца. Если дети до 6 лет не вакцинированы против ВГВ при рождении, допускается завершение курса вакцинации против данной инфекции моновакциной против ВГВ;</one><one>\n 2) ранее не вакцинированные дети старше 6 лет и взрослые – 0-1-6 с интервалами между первой и второй прививками – один месяц, между второй и третьей – пять месяцев;</one><one>\n 3) вакцинация против ВГВ лиц старше 15 лет проводится после предварительной маркерной диагностики на ВГВ. Лица с положительным результатом исследования на ВГВ к вакцинации не допускаются.</one>"
       },
       "link3": {
-        "link": "\t\tIII. Вакцинация против дифтерии, столбняка и коклюша проводится АбКДС-содержащими вакцинами, а также АДС-М.",
-        "content": "<zero>\t\tIV. Ранее не привитые дети:</zero><two>\n - 1) с 4 до 7 лет прививаются комбинированными АбКДС-содержащими вакцинами с дифтерийным анатоксином по схеме: 3 прививки с интервалом 2 месяца, и четвертая прививка через 6-12 месяцев;</two><two>\n -  2) 7 лет и старше, взрослые прививаются по схеме: две прививки АбКДС с уменьшенным содержанием дифтерийного анатоксина с интервалом 1 месяц и третья прививка через 6-12 месяцев.</two><zero>\t\tАбКДС-содержащие комбинированные вакцины с дифтерийным анатоксином применяются у детей до 7 лет, АбКДС-содержащие вакцины с уменьшенным содержанием дифтерийного анатоксина – у детей с 4 лет, АДС-М – у детей с 7 лет и взрослых.</zero><zero>\t\tV. При наличии противопоказаний к коклюшному компоненту вакцинация проводится АДС-М для детей старше 7 лет:</zero><one>\n 1) если реакция развилась на первую вакцинацию АбКДС-содержащей вакциной, то вторую прививку осуществляют АДС-М не ранее чем через 3 месяца;</one><one>\n2) если реакция развилась на вторую вакцинацию АбКДС-содержащей вакциной, то курс вакцинации против дифтерии и столбняка считают законченным. В обоих случаях первую ревакцинацию АДС-М проводят через 12 месяцев;</one><one>\n3) если реакция развилась на третью вакцинацию АбКДС-содержащей вакциной, первую ревакцинацию АДС-М проводят через 12-18 месяцев.</one><zero>\t\tVI. Если ребенок не получил вторую дозу АбКДС-содержащей вакцины, то курс вакцинации продолжается с соблюдением чередования видов АбКДС-содержащих вакцин в соответствии со сроками, утвержденными Постановлением № 612.</zero><zero>\t\tVII. При позднем завершении первичного вакцинального комплекса АбКДС-содержащими вакцинами, первая ревакцинация проводится с интервалом не менее чем через один год.</zero><zero>\t\tVIII. Комбинированные АбКДС-содержащие вакцины с повышенным содержанием дифтерийного анатоксина, детям старше 7 лет не применяются.</zero>"
+        "link": "\t\tВакцинация против дифтерии, столбняка и коклюша проводится АбКДС-содержащими вакцинами, а также АДС-М.",
+        "content": "<zero>\t\tРанее не привитые дети:</zero><two>\n - 1) с 4 до 7 лет прививаются комбинированными АбКДС-содержащими вакцинами с дифтерийным анатоксином по схеме: 3 прививки с интервалом 2 месяца, и четвертая прививка через 6-12 месяцев;</two><two>\n -  2) 7 лет и старше, взрослые прививаются по схеме: две прививки АбКДС с уменьшенным содержанием дифтерийного анатоксина с интервалом 1 месяц и третья прививка через 6-12 месяцев.</two><zero>\t\tАбКДС-содержащие комбинированные вакцины с дифтерийным анатоксином применяются у детей до 7 лет, АбКДС-содержащие вакцины с уменьшенным содержанием дифтерийного анатоксина – у детей с 4 лет, АДС-М – у детей с 7 лет и взрослых.</zero><zero>\t\tПри наличии противопоказаний к коклюшному компоненту вакцинация проводится АДС-М для детей старше 7 лет:</zero><one>\n 1) если реакция развилась на первую вакцинацию АбКДС-содержащей вакциной, то вторую прививку осуществляют АДС-М не ранее чем через 3 месяца;</one><one>\n2) если реакция развилась на вторую вакцинацию АбКДС-содержащей вакциной, то курс вакцинации против дифтерии и столбняка считают законченным. В обоих случаях первую ревакцинацию АДС-М проводят через 12 месяцев;</one><one>\n3) если реакция развилась на третью вакцинацию АбКДС-содержащей вакциной, первую ревакцинацию АДС-М проводят через 12-18 месяцев.</one><zero>\t\t Если ребенок не получил вторую дозу АбКДС-содержащей вакцины, то курс вакцинации продолжается с соблюдением чередования видов АбКДС-содержащих вакцин в соответствии со сроками, утвержденными Постановлением № 612.</zero><zero>\t\t При позднем завершении первичного вакцинального комплекса АбКДС-содержащими вакцинами, первая ревакцинация проводится с интервалом не менее чем через один год.</zero><zero>\t\tКомбинированные АбКДС-содержащие вакцины с повышенным содержанием дифтерийного анатоксина, детям старше 7 лет не применяются.</zero>"
       },
-      "data": "<container><zero>\t\tI. При проведении наверстывающей вакцинации против пневмококковой инфекции, между первой и второй дозами соблюдается интервал не менее 1 месяца, между второй и третьей дозами – не менее 2 месяцев. </zero><link1></link1><link2></link2><link3></link3><zero>\t\tIX. Дети, не получившие вакцинацию против туберкулеза при рождении (1-4 день жизни) прививаются в организациях здравоохранения, оказывающих амбулаторно-поликлиническую помощь по месту жительства: в возрасте до 2 месяцев без постановки пробы Манту, в возрасте 2 месяца и старше – после постановки пробы Манту с отрицательным результатом исследования. Детям, не получившим вакцинацию против туберкулеза при рождении, вакцинация против данной инфекции проводится до 15 лет. Интервал между пробой Манту вакцинацией вакциной БЦЖ – не менее трех дней и не более двух недель. Перед постановкой пробы Манту соблюдается интервал 2 месяца от других вакцин.</zero><zero>\t\tX. Девочки в возрасте до 15 лет, пропустившие плановую профилактическую прививку против вируса папилломы человека в 11 лет, прививаются по графику в соответствии с инструкцией по медицинскому применению вакцины и постановлением Главного государственного санитарного врача Республики Казахстан. Вакцинация проводится в прививочных пунктах организаций образования и организаций здравоохранения, оказывающих амбулаторно-поликлиническую помощь по месту жительства.</zero><zero>\t\tXI. С целью определения групп высокого риска среди населения по вакциноуправляемым инфекциям и при наличии диагностических препаратов проводится изучение напряженности иммунитета к вакциноуправляемым инфекциям.</zero><zero>\t\tXII. При выявлении неиммунных лиц (с отрицательным результатом исследования и низким титром антител на напряженность иммунитета) к кори, краснухи, эпидемическому паротиту, полиомиелиту, дифтерии, столбняку и коклюшу проводится их дополнительная однократная вакцинация.</zero></container>"
+      "data": "<container><zero>\t\tПри проведении наверстывающей вакцинации против пневмококковой инфекции, между первой и второй дозами соблюдается интервал не менее 1 месяца, между второй и третьей дозами – не менее 2 месяцев. </zero><link1></link1><link2></link2><link3></link3><zero>\t\tДети, не получившие вакцинацию против туберкулеза при рождении (1-4 день жизни) прививаются в организациях здравоохранения, оказывающих амбулаторно-поликлиническую помощь по месту жительства: в возрасте до 2 месяцев без постановки пробы Манту, в возрасте 2 месяца и старше – после постановки пробы Манту с отрицательным результатом исследования. Детям, не получившим вакцинацию против туберкулеза при рождении, вакцинация против данной инфекции проводится до 15 лет. Интервал между пробой Манту вакцинацией вакциной БЦЖ – не менее трех дней и не более двух недель. Перед постановкой пробы Манту соблюдается интервал 2 месяца от других вакцин.</zero><zero>\t\tДевочки в возрасте до 15 лет, пропустившие плановую профилактическую прививку против вируса папилломы человека в 11 лет, прививаются по графику в соответствии с инструкцией по медицинскому применению вакцины и постановлением Главного государственного санитарного врача Республики Казахстан. Вакцинация проводится в прививочных пунктах организаций образования и организаций здравоохранения, оказывающих амбулаторно-поликлиническую помощь по месту жительства.</zero><zero>\t\tС целью определения групп высокого риска среди населения по вакциноуправляемым инфекциям и при наличии диагностических препаратов проводится изучение напряженности иммунитета к вакциноуправляемым инфекциям.</zero><zero>\t\tПри выявлении неиммунных лиц (с отрицательным результатом исследования и низким титром антител на напряженность иммунитета) к кори, краснухи, эпидемическому паротиту, полиомиелиту, дифтерии, столбняку и коклюшу проводится их дополнительная однократная вакцинация.</zero></container>"
     },
     "contraindications": {
       "title": "Медицинские противопоказания к проведению профилактических прививок",
@@ -506,8 +506,7 @@
       ],
       "epidLinks": [
         {
-          "lvl0": "Профилактические прививки по эпидемиологическим показаниям:",
-          "lvl1": "Лица, относящиеся к группам риска по роду своей профессиональной деятельности, в том числе: медицинские работники:",
+          "lvl1": "Лица, относящиеся к группам риска по роду своей профессиональной деятельности, в том числе: медицинские работники",
           "lvl2": [
             {
               "name": "Вирусный гепатит B",
@@ -520,7 +519,7 @@
           ]
         },
         {
-          "lvl1": "Лица, получившие травмы, ранения с нарушением целостности кожных покровов и слизистых:",
+          "lvl1": "Лица, получившие травмы, ранения с нарушением целостности кожных покровов и слизистых",
           "lvl2": [
             {
               "name": "Вирусный гепатит B",
@@ -529,7 +528,7 @@
           ]
         },
         {
-          "lvl1": "Дети, состоящие на динамическом наблюдении в медицинской организации:",
+          "lvl1": "Дети, состоящие на динамическом наблюдении в медицинской организации",
           "lvl2": [
             {
               "name": "Грипп",
@@ -538,7 +537,7 @@
           ]
         },
         {
-          "lvl1": "Лица, получившие переливание крови:",
+          "lvl1": "Лица, получившие переливание крови",
           "lvl2": [
             {
               "name": "Вирусный гепатит B",
@@ -547,7 +546,7 @@
           ]
         },
         {
-          "lvl1": "Дети-сироты и дети, оставшиеся без попечения родителей, обучающиеся или воспитывающиеся в организациях для детей-сирот и детей, оставшихся без попечения родителей, а также лица медико-социальных учреждений для престарелых и лиц с инвалидностью:",
+          "lvl1": "Дети-сироты и дети, оставшиеся без попечения родителей, обучающиеся или воспитывающиеся в организациях для детей-сирот и детей, оставшихся без попечения родителей, а также лица медико-социальных учреждений для престарелых и лиц с инвалидностью",
           "lvl2": [
             {
               "name": "Грипп",
@@ -556,7 +555,7 @@
           ]
         },
         {
-          "lvl1": "По эпидемиологическим показаниям:",
+          "lvl1": "По эпидемиологическим показаниям",
           "lvl2": [
             {
               "name": "Коронавирусная инфекция",
@@ -581,7 +580,7 @@
           ]
         },
         {
-          "lvl1": "Население, проживающее и работающее в природных очагах инфекционных заболеваний:",
+          "lvl1": "Население, проживающее и работающее в природных очагах инфекционных заболеваний",
           "lvl2": [
             {
               "name": "Туляремия",
@@ -598,7 +597,7 @@
           ]
         },
         {
-          "lvl1": "Лица, относящиеся к группам риска по роду своей профессиональной деятельности, в том числе: работники канализационных и очистных сооружений:",
+          "lvl1": "Лица, относящиеся к группам риска по роду своей профессиональной деятельности, в том числе: работники канализационных и очистных сооружений",
           "lvl2": [
             {
               "name": "Брюшной тиф",
@@ -607,7 +606,7 @@
           ]
         },
         {
-          "lvl1": "Сотрудники научно-исследовательских организаций, лабораторий, в том числе персонал, проводящий отбор проб, вивариев, организаций и учреждений, проводящих исследования на наличие возбудителя бешенства и работающих с животными:",
+          "lvl1": "Сотрудники научно-исследовательских организаций, лабораторий, в том числе персонал, проводящий отбор проб, вивариев, организаций и учреждений, проводящих исследования на наличие возбудителя бешенства и работающих с животными",
           "lvl2": [
             {
               "name": "Бешенство",
@@ -616,7 +615,7 @@
           ]
         },
         {
-          "lvl1": "Лица, выполняющие работу по отлову и содержанию безнадзорных животных:",
+          "lvl1": "Лица, выполняющие работу по отлову и содержанию безнадзорных животных",
           "lvl2": [
             {
               "name": "Бешенство",
@@ -625,7 +624,7 @@
           ]
         },
         {
-          "lvl1": "Сотрудники органов охотничьего и лесного хозяйств, егери, работники убойных пунктов (площадок), таксидермисты, кинологи:",
+          "lvl1": "Сотрудники органов охотничьего и лесного хозяйств, егери, работники убойных пунктов (площадок), таксидермисты, кинологи",
           "lvl2": [
             {
               "name": "Бешенство",
@@ -634,7 +633,7 @@
           ]
         },
         {
-          "lvl1": "Сотрудники организаций здравоохранения, участвующих в проведении парентеральных вмешательств больным бешенством, и патологоанатомы:",
+          "lvl1": "Сотрудники организаций здравоохранения, участвующих в проведении парентеральных вмешательств больным бешенством, и патологоанатомы",
           "lvl2": [
             {
               "name": "Бешенство",
@@ -643,7 +642,7 @@
           ]
         },
         {
-          "lvl1": "Лица, подвергшиеся укусу или ослюнению любым животным:",
+          "lvl1": "Лица, подвергшиеся укусу или ослюнению любым животным",
           "lvl2": [
             {
               "name": "Бешенство",
