fix: about en kz

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -659,7 +659,7 @@
     "about": {
       "title": "About",
       "name": "Immunization in Kazakhstan at the primary health care level",
-      "data": "<container><zero>The methodological manual on the discipline <b>“Immunization in Kazakhstan at the primary health care level”</b> is devoted to the issues of vaccination of the population at the primary health care level. The methodological manual contains additional tests in order to consolidate the studied material and is intended for students, interns, residents in the specialty “Family Medicine”.</zero></container>"
+      "data": "<container><zero>Annex <b>‘Immunisation in Kazakhstan’</b> is devoted to the issues of vaccination of the population at the level of primary health care. The appendix contains additional test tasks to consolidate the studied material and is meant for senior students, interns, residents in the speciality ‘Family Medicine’, will be useful for primary care medical workers, family doctors, nurses and paramedics. Moreover, the app will be of interest to the general public, including parents who want to be informed about their children's vaccination schedules and older adults who want to learn more about the necessary vaccinations to maintain good health.</zero></container>"
     },
     "test": {
       "title": "MCQ",
