--- a/i18n/locales/kz.json
+++ b/i18n/locales/kz.json
@@ -655,7 +655,7 @@
     "about": {
       "title": "Қолданба туралы",
       "name": "Қазақстанда АМСК деңгейінде иммундау",
-      "data": "<container><zero><b>'Қазақстанда АМСК деңгейінде иммундау'</b> пәні бойынша оқу құралы алғашқы медициналық-санитарлық көмек деңгейінде халықты вакцинациялау мәселелеріне арналған. Әдістемелік құралда зерттелген материалды бекіту мақсатында қосымша тест тапсырмалары бар және жоғары курс студенттеріне, интерндерге, 'отбасылық медицина' мамандығы бойынша резиденттерге арналған.</zero></container>"
+      "data": "<container><zero><b>«Қазақстандағы иммундау»</b> қосымшасы алғашқы медициналық-санитарлық көмек деңгейінде халықты вакцинациялау мәселелеріне арналған.Қосымша зерделенген материалды бекіту мақсатында қосымша тапсырмаларын қамтиды және жоғары курс студенттеріне, интерндерге, «Отбасылық медицина» мамандығы бойынша резиденттерге арналған, ол алғашқы медициналық көмек көрсету қызметкерлеріне, отбасылық дәрігерлерге, медбикелер мен фельдшерлер үшін пайдалы болады.Сонымен қатар, қолданба халықтың кең бөлігін, соның ішінде балаларының вакцинация кестелері туралы хабардар болғысы келетін ата-аналарды және денсаулығын сақтау үшін қажетті екпе туралы көбірек білгісі келетін егде жастағы адамдарды қызықтырады.</zero></container>"
     },
     "test": {
       "title": "Тесттер",
