--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -654,8 +654,8 @@
     },
     "about": {
       "title": "О приложении",
-      "name": "Иммунизация в Казахстане на уровне первичного звена",
-      "data": "<container><zero>Учебное пособие по дисциплине <b>«Иммунизация в Казахстане на уровне первичного звена»</b> посвящена вопросам вакцинации населения на уровне первичной медико-санитарной помощи. Методическое пособие содержит дополнительные тестовые задания с целью закрепления изученного материала и предназначено для студентов старших курсов, интернов, резидентов по специальности «Семейная медицина».</zero></container>"
+      "name": "Иммунизация в Казахстане",
+      "data": "<container><zero>Приложение <b>«Иммунизация в Казахстане»</b> посвящено вопросам вакцинации населения на уровне первичной медико-санитарной помощи. Приложение содержит дополнительные тестовые задания с целью закрепления изученного материала и предназначено для студентов старших курсов, интернов, резидентов по специальности «Семейная медицина», будет полезно для медицинских работников первичного звена, семейных врачей, медсестер и фельдшеров. Более того, приложение заинтересует широкие слои населения, включая родителей, которые хотят быть информированными о графике вакцинации своих детей, и людей старшего возраста, желающих узнать больше о необходимых прививках для поддержания здоровья.</zero></container>"
     },
     "test": {
       "title": "Тестирование",
