--- a/i18n/locales/kz.json
+++ b/i18n/locales/kz.json
@@ -126,7 +126,7 @@
       },
       {
         "href": "/info/vac",
-        "name": "Профилектикалық екпелердің егу уақыты бұзылған   адамдарды егу"
+        "name": "Профилактикалық екпелердің егу уақыты бұзылған   адамдарды егу"
       },
       {
         "href": "/info/contraindications",
